--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&family=Montserrat:wght@400;700&family=Raleway:wght@400;500;600;800&family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Mulish:wght@300;400&family=Open+Sans:wght@400;600&family=Poppins:wght@400;500&family=Roboto:wght@400;500&display=swap');
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 body{
     position: relative;
@@ -85,4 +85,28 @@ body{
     position:relative;
     left: -17%;
 
+}
+.calculate-gpa{
+    padding: 5px 10px;
+    border: none;
+    background-color: crimson;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.mygpa{
+    text-align: center;
+    color: red;
+}
+#cgpa{
+    background-color: red;
+    color: white;
+    text-align: center;
+    font-weight: bolder;
+    padding: 10px 10px;
+    border-radius:  5px;
 }
