--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 body {
   position: relative;
-  background-color: rgba(222, 225, 250, 0.952);
+  background-color: #E7F5FE;
 }
 .banner{
     text-align: center;
@@ -38,6 +38,7 @@ body {
 #cars{
     border: 1px solid lightgray;
     outline: none;
+    padding-left: 10px;
 }
 .credit {
   height: 40px;
@@ -56,7 +57,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 40px;
   border-radius: 20px;
-  background-color: salmon;
+  background-color: white;
 }
 .fa-circle-plus {
   font-size: 30px;
@@ -98,6 +99,7 @@ body {
   cursor: pointer;
   position: relative;
   left: -17%;
+  margin-bottom: 50px;
 }
 .calculate-gpa {
   padding: 5px 10px;
@@ -115,8 +117,9 @@ body {
   text-align: center;
   color: white;
   background-color: blue;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   margin-bottom: 10px;
+  border-radius: 10px;
 }
 #cgpa {
   background-color: crimson;
@@ -129,14 +132,17 @@ body {
 }
 
 @media (max-width:668px) {
+  *{
+    box-sizing:none;
+  }
    .items .course{
-       width: 90%;
+       width: 100%;
    }
    .grades{
-       width: 32%;
+       width: 35%;
    }
    .credit{
-       width: 20%;
+       width: 25%;
        padding-left: 15px;
    }
    .input-items{
@@ -144,6 +150,20 @@ body {
    }
    .container{
        margin: 0 20px;
+   }
+   label{
+     display: none;
+   }
+   #cars{
+     padding-left: 0;
+     text-align: center;
+   }
+   #add-semester{
+     margin-top: 50px;
+   }
+   .banner h2{
+     font-size: 25px;
+     padding: 20px;
    }
     
 }
